<resources>
    <string name="app_name">Floating Player For Youtube</string>
    <string name="subscriberName">" Subscriber"</string>
    <string name="videoCountName">" Video"</string>
    <string name="videoView">" View"</string>

    <string name="dateDay">" Days Ago"</string>
    <string name="dateMonth">" Months Ago"</string>
    <string name="dateYear">" Years Ago"</string>

    <string name="title_activity_playlist_activityy">Playlist</string>
    <string name="title_activity_playlist">Playlist</string>
    <string name="title_activity_main">Floating Player</string>
    <string name="filter">Filter</string>
    <string name="search">Search</string>
    <string name="premium">Premium</string>
    <string name="bigSearch">QUICK SEARCH</string>
    <string name="optionMenuItemOne">Add Favorites</string>
    <string name="optionMenuItemTwo">Share</string>
    <string name="optionMenuItemAddToPlaylis">Add to Playlist</string>
    <string name="optionMenuItemTwitter">Twitter</string>
    <string name="optionMenuItemDelete">Delete</string>
    <string name="optionMenuItemDeleteFavorite">Delete</string>
    <string name="optionMenuItemDeleteHistory">Delete</string>

    <!-- TODO Filter Dialog -->
    <string name="titleForFilter">Filter Results</string>
    <string name="sorting">Sorting</string>
    <string name="contentType">Content Type</string>
    <string name="btnSave">Save</string>
    <string name="btnCancelForFilter">Cancel</string>


    <!-- TODO PlaylistChooseWindow -->
    <string name="playlistChooseTitle">Select Playlist</string>
    <string name="playlistLikedVideos">Liked</string>
    <string name="btnCancel">Cancel</string>

    <!-- TODO geting Data progres bar -->
    <string name="progressMessage">Please Waiting For Data</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- TODO: suffle and repeat Toast Message -->
    <string name="suffleMessageOn">Suffle Mode On</string>
    <string name="suffleMessageOff">Suffle Mode Off</string>
    <string name="repeatMessageOn">Repeat Mode On</string>
    <string name="repeatMessageOff">Repeat Mode Off</string>
    <string name="stopfinishvideoOn">Auto Play:ON</string>
    <string name="stopfinishvideoOff">Auto Play:OFF</string>


    <!-- TODO: internetConnection Toast Message -->
    <string name="internetConnectionMessage">Please Check Your Internet Connection</string>
    <string name="internetConnectionTryAgain">Try Againg</string>
    <string name="internetConnectionQuit">Exit</string>
    <!-- TODO: permissionMessage For above marshmallow -->
    <string name="permissionMessage">Please Active to Permission</string>
    <string name="rateApp">Rate App</string>
    <string name="shareApp">Share</string>
    <string name="qualityOption">High Quality</string>
    <string name="myDataFavorite">Favorites</string>
    <string name="myDataHistory">History</string>
    <string name="myDataFromYT">FromYT</string>
    <string name="myDataPlaylist">Playlist</string>

    <string name="apiKeyLink">http://sscoderr.com/json/apiKeysss.json</string><!--ssssssssss Don Forget-->
    <string name="apiKeyUpdateLink">http://sscoderr.com/json/isHaveUpdatess.txt</string><!--ssssssssss Don Forget-->


    <string name="banner_ad_unit_id_trend_music" translatable="false">ca-app-pub-2609460348345466/4893484518</string>
    <string name="banner_ad_unit_id_trend_video" translatable="false">ca-app-pub-2609460348345466/6267217885</string>
    <string name="banner_ad_unit_id_my_data" translatable="false">ca-app-pub-2609460348345466/7005584481</string>
    <string name="banner_ad_unit_id_playlists" translatable="false">ca-app-pub-2609460348345466/8865461060</string>

    <string name="admob_interstitial_id_close_service" translatable="false">ca-app-pub-2609460348345466/4567123409</string>
    <string name="admob_interstitial_six_tap" translatable="false">ca-app-pub-2609460348345466/2870898358</string>


    <string name="forKitkatAndBeforeMessage">Please Stop Video And Play Again</string>

    <string name="please_click_back_again_to_exit">Please click BACK again to exit!</string>

    <string name="similar">SIMILAR</string>
    <string name="favorites_list_is_empty">Favorites List Is Empty!</string>
    <string name="history_list_is_empty">History List Is Empty!</string>
    <string name="playlist_list_is_empty">Playlist List Is Empty!</string>


    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="LOADING">Loading...</string>
    <string name="AreYouSure">Are you sure?</string>
    <string name="DeleteThisHistory">Delete this history!</string>
    <string name="YesDeleteIt">Yes,delete it!</string>
    <string name="Deleted">Deleted!</string>
    <string name="YourHistoryHasBeenDeleted">Your history has been deleted!</string>
    <string name="welcome">Welcome!</string>
    <string name="ssplayertitle">Floating player for Youtube Update!</string>

    <string name="next">Try It</string>
    <string name="finish">Finish</string>
    <string name="help">Help</string>


    <!-- Yeni Versiyon için oluşturulanlar -->
    <string name="crash_SelectedPlaylistNotAvailable">Selected Playlist Not Available</string>
    <string name="crash_SelectedPlaylistNameNotAvailable">Selected Playlist Name Not Available</string>
    <string name="crash_PlaylistNameNotAvailable">Playlist Name Not Available</string>
    <string name="crash_PlaylistIdNotAvailable">Playlist Id Not Available</string>
    <string name="crash_PlaylistNotAvailable">Playlist Not Available</string>
    <string name="crash_SelectedVideoNotAvailable">Selected Video Not Available</string>
    <string name="crash_VideoNotAvailable">Video Not Available</string>
    <string name="crash_keywordNotAdded">Keyword Not Added</string>
    <string name="crash_keywordNotUpdated">Keyword Not Updated</string>
    <string name="crash_keywordNotDeleted">Keyword Not Deleted</string>

    <string name="ListIsEmpty">List Is Empty!</string>

    <string name="openVideoonYouTube">Open video on YouTube</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="hizmetSartlari">To meet the YouTube Terms of Service, videos can not be played while in background or screen is off, and videos can not be downloaded.\n\n
    The app has no affiliation with YouTube.\n
    Play Youtube videos using Youtube API s.</string>
    <string name="note">Note</string>
    <string name="startAppId">210480126</string>
    <string name="twitter_dialog">Dont Show Again</string>
    <!--Notification-->
    <string name="notification_channel_id" translatable="false">FloatingPlayer</string>
    <string name="rate_title">Would you like to support us?</string>
    <string name="rate_message">***** Rate us 5 Stars *****</string>
    <string name="rate_now">Rate now</string>
    <string name="rate_later">Not now</string>
    <string name="search_vid">Video</string>
    <string name="search_playlist">Playlist</string>
    <string name="first_page_most_played_vids">Most and Last Played</string>
    <string name="first_page_trends">Trend by Countries</string>
    <string name="see_all">See All</string>
    <string name="import_from_yt">Import Your Youtube Playlist</string>
    <string name="create_new_playlist">Create New Playlist</string>
    <string name="alert_playlist_hint">Playlist Name</string>
    <string name="alert_create_playlist">Create</string>
    <string name="toast_video_added_playlist">Saved as Local Playlist</string>



    <string name="first_page_main_slider_hits">Hit Music</string>
    <string name="first_page_main_slider_workout">Workout</string>
    <string name="first_page_main_slider_party">Party Music</string>
    <string name="first_page_main_slider_new_releases">New Releases</string>
    <string name="first_page_recommendation_slider_title">Recommendation For You</string>
    <string name="first_page_recommendation_refresh_button">Refresh</string>

    <string name="empty_list_reload_text">Reload</string>

    <string name="empty_list_message">Something went wrong.Please Reload</string>

    <string name="app_bar_title_trends_countries">Trend by Countries</string>

    <string name="trend_video_fragment_message">This Page Also Will Be Changed With Next Update.We Are Improving the App.Keep using the app For More Feature.**Do not forget rate us to support**.Thanks :)</string>


</resources>

