<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/search_button"
        android:title="@string/search"
        android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
        app:showAsAction="always"
        android:layout_width="wrap_content"
        android:orderInCategory="1"/>

    <item android:id="@+id/rate_button"
        android:title="@string/rateApp"
        app:showAsAction="never"
        android:layout_width="wrap_content" />
    <item android:id="@+id/share_button"
        android:title="@string/shareApp"
        app:showAsAction="never"
        android:layout_width="wrap_content" />

    <item android:id="@+id/checkHighQuality"
        android:checkable="true"
        android:title="@string/qualityOption"
        app:actionViewClass="android.widget.CheckBox"
        app:showAsAction="never|withText">
    </item>

</menu>