<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.bimilyoncu.sscoderss.floatingplayerforyoutube.MyDateFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center">
        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbarSize="0dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RelativeLayout
                    android:layout_width="@dimen/custom_button_width"
                    android:layout_height="@dimen/custom_button_height"
                    android:background="@drawable/my_custom_button_selected"
                    android:gravity="center"
                    android:id="@+id/rel_favorite"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtFavButton"
                        android:text="@string/myDataFavorite"
                        android:textSize="12dp"
                        android:textColor="#FFFFFF"
                        android:paddingLeft="@dimen/custom_button_padding_horizontal"
                        android:paddingRight="@dimen/custom_button_padding_horizontal" />
                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="@dimen/custom_button_width"
                    android:layout_height="@dimen/custom_button_height"
                    android:background="@drawable/selector_my_custom_button"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/custom_button_spaces"
                    android:id="@+id/rel_history"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/myDataHistory"
                        android:id="@+id/txtHistoryButton"
                        android:textSize="12dp"
                        android:textColor="#424242"
                        android:paddingLeft="@dimen/custom_button_padding_horizontal"
                        android:paddingRight="@dimen/custom_button_padding_horizontal" />
                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="@dimen/custom_button_width"
                    android:layout_height="@dimen/custom_button_height"
                    android:background="@drawable/selector_my_custom_button"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/custom_button_spaces"
                    android:id="@+id/rel_from_youtube"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtFromYoutubeButton"
                        android:text="@string/myDataFromYT"
                        android:textSize="12dp"
                        android:textColor="#424242"
                        android:paddingLeft="@dimen/custom_button_padding_horizontal"
                        android:paddingRight="@dimen/custom_button_padding_horizontal" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="@dimen/custom_button_width"
                    android:layout_height="@dimen/custom_button_height"
                    android:background="@drawable/selector_my_custom_button"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/custom_button_spaces"
                    android:id="@+id/rel_recommented"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtRecommentedButton"
                        android:text="@string/myDataSuggest"
                        android:textSize="12dp"
                        android:textColor="#424242"
                        android:paddingLeft="@dimen/custom_button_padding_horizontal"
                        android:paddingRight="@dimen/custom_button_padding_horizontal"/>
                </RelativeLayout>
            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="8dp"
        android:elevation="2dp">
        <!--android:background="#424242"-->
        <ListView
            android:id="@+id/my_data_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@null"
            android:dividerHeight="0dp"
            android:scrollbars="none"
            />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/myPBForFav"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
            android:indeterminateDrawable="@drawable/progresbar"
            android:visibility="invisible" />
        <ExpandableListView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:visibility="invisible"
            android:id="@+id/user_dataExpand"
            android:divider="@null"
            android:dividerHeight="0dp"
            android:scrollbars="none">

        </ExpandableListView>
        <android.support.design.widget.CoordinatorLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="@dimen/fab_margin"
                app:layout_anchorGravity="bottom|right|end"
                app:backgroundTint="?attr/colorPrimary"
                app:srcCompat="@mipmap/get_user_data_icon" />
        </android.support.design.widget.CoordinatorLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_centerHorizontal="true">
                <com.google.android.gms.ads.AdView
                    xmlns:ads="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/adViewMyData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    ads:adSize="BANNER"
                    ads:adUnitId="@string/banner_ad_unit_id_my_data">
                </com.google.android.gms.ads.AdView>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
